fix: resolve code review findings, update AGENTS.md and skills
Code review fixes (15 issues across 8 modules):

Blocking:
- LoggingClientHttpRequestInterceptor: SSE responses no longer buffered,
  body logging demoted to DEBUG to prevent sensitive data leakage
- AgentLoopTemplate: removed instanceof dependency on ReActAgentLoop,
  added TurnLifecycle.resolveTools() SPI method for tool resolution

Important:
- Added GlobalExceptionHandler (@RestControllerAdvice) for LlmException
  HTTP status mapping
- Added ApiKeyInterceptor + ServerAutoConfiguration + ServerProperties
  for /api/** path authentication
- Added @author/@since Javadoc to all 10 core model records
- FinishReason: converted // comments to proper Javadoc
- LlmProperties: removed unused Duration/List imports
- CloudAi Builder: restricted default permissions from allow-all to
  FILE_READ(**) + FILE_WRITE(/workspace/**)

Minor:
- InMemoryMemoryStore: Collectors.toList() -> .toList()
- RetryUtils: cache RetryTemplate by maxRetries
- AgentService: moved provider creation from method to constructor
- SecurityIntegrationTest: Executors -> explicit ThreadPoolExecutor
- MemoryAdvisor: added ArrayList import, removed FQN

Docs:
- AGENTS.md: corrected project facts (11 modules, Spring Boot 4.1.0,
  JUnit 5.11.4, JDK 21, com.cloudai root package)
- java-spring-boot skill: updated to Spring Boot 4.x patterns
- java-design-patterns skill: added state machine, pipeline, SPI plugin
  patterns with AI framework examples
- New java-ai-framework skill: module structure, SPI design, adapter
  pattern, Advisor chain, auto-config, exception hierarchy, observation,
  template method, test helpers, framework review checklist